--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,7 +4,11 @@ backend:
   branch: gh-pages
   site_domain: festive-bose-5d5f60.netlify.com
 
+# These lines should *not* be indented
+publish_mode: editorial_workflow # Ensures content goes through workflow first, ("Drafts" --> "In Review" --> "Ready"), before being published
 media_folder: "images/uploads"
+site_url: https://brootaylor.github.io/uxbrighton/
+display_url: https://brootaylor.github.io/uxbrighton/
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
