--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: brootaylor/uxbrighton
   branch: gh-pages
-  site_domain: festive-bose-5d5f60.netlify.com
+  site_domain: festive-bose-5d5f60.netlify.com # Using a placeholder Netlify site and custom Netlify domain to enable the backend OAuth configuration
 
 # These lines should *not* be indented
 publish_mode: editorial_workflow # Ensures content goes through workflow first, ("Drafts" --> "In Review" --> "Ready"), before being published
@@ -11,8 +11,8 @@ site_url: https://brootaylor.github.io/uxbrighton/
 display_url: https://brootaylor.github.io/uxbrighton/
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
+  - name: "posts" # Used in routes, e.g., /admin/collections/blog
+    label: "Posts" # Used in the UI
     folder: "_posts/" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
