--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
-  repo: brootaylor/uxbrighton
-  branch: gh-pages
-  site_domain: festive-bose-5d5f60.netlify.com # Using a placeholder Netlify site and custom Netlify domain to enable the backend OAuth configuration
+  repo: brootaylor/uxbrighton # Path to the GitHub code repository
+  branch: gh-pages # Branch that Netlify CMS will be available on
+  site_domain: uxbrighton-netlifycms-test.netlify.com # Using a placeholder Netlify site and custom Netlify domain to enable the backend OAuth configuration
 
 # These lines should *not* be indented
 publish_mode: editorial_workflow # Ensures content goes through workflow first, ("Drafts" --> "In Review" --> "Ready"), before being published
