--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: brootaylor/uxbrighton # Path to the GitHub code repository
   branch: gh-pages # Branch that Netlify CMS will be available on
-  site_domain: uxbrighton-netlifycms-test.netlify.com # Using a placeholder Netlify site and custom Netlify domain to enable the backend OAuth configuration
+  site_domain: netlify-cms-hookup.netlify.com # Using a placeholder Netlify site and custom Netlify domain to enable the backend OAuth configuration
 
 # These lines should *not* be indented
 publish_mode: editorial_workflow # Ensures content goes through workflow first, ("Drafts" --> "In Review" --> "Ready"), before being published
