--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,9 +11,10 @@ site_url: https://brootaylor.github.io/uxbrighton/
 display_url: https://brootaylor.github.io/uxbrighton/
 
 collections:
-  - name: "homepages" # Used in routes, e.g., /admin/collections/blog
-    label: "Homepages" # Used in the UI
-    folder: "{{year}}" # The path to the folder where the documents are stored
+  - name: "homepage_2022" # Used in routes, e.g., /admin/collections/blog
+    label: "Homepage 2022" # Used in the UI
+    folder: "2022" # The path to the folder where the documents are stored
+    slug: "index"
     create: false # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
