--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,17 +6,18 @@ backend:
 
 # These lines should *not* be indented
 publish_mode: editorial_workflow # Ensures content goes through workflow first, ("Drafts" --> "In Review" --> "Ready"), before being published
-media_folder: "images/uploads"
+media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
+public_folder: "images/uploads" # The src attribute for uploaded media will begin with images/uploads
 site_url: https://brootaylor.github.io/uxbrighton/
 display_url: https://brootaylor.github.io/uxbrighton/
 logo_url: https://brootaylor.github.io/uxbrighton/2022/logo/red-square-2018.png
 
 collections:
-  - name: "homepage_2022" # Used in routes, e.g., /admin/collections/blog
+  - name: "homepage-2022" # Used in routes, e.g., /admin/collections/blog
     label: "Homepage 2022" # Used in the UI
-    folder: "2022" # The path to the folder where the documents are stored
-    slug: "index"
-    create: false # Allow users to create new documents in this collection
-    fields: # The fields for each document, usually in front matter
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Description", name: "description", widget: "string"}
+    files:
+      - label: "Homepage 2022"
+        name: "homepage"
+        file: "2022/index.html"
+        fields: # The fields for each document, usually in front matter
+          - {label: "Title", name: "title", widget: "string"}
