--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,11 +13,11 @@ display_url: https://brootaylor.github.io/uxbrighton/
 logo_url: https://brootaylor.github.io/uxbrighton/2022/logo/red-square-2018.png
 
 collections:
-  - name: "homepage-2022" # Used in routes, e.g., /admin/collections/blog
-    label: "Homepage 2022" # Used in the UI
+  - name: "homepages" # Used in routes, e.g., /admin/collections/blog
+    label: "Homepages" # Used in the UI
     files:
-      - label: "Homepage 2022"
+      - label: "Homepage {{year}}"
         name: "homepage"
-        file: "2022/index.html"
+        file: "{{year}}/index.html"
         fields: # The fields for each document, usually in front matter
           - {label: "Title", name: "title", widget: "string"}
