--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,16 +13,19 @@ display_url: https://brootaylor.github.io/uxbrighton/
 logo_url: https://brootaylor.github.io/uxbrighton/2022/logo/red-square-small.png
 
 collections:
-  - name: "homepages" # Used in routes, e.g., /admin/collections/blog
-    label: "Homepages" # Used in the UI
+  - name: "2018" # Used in routes, e.g., /admin/collections/blog
+    label: "2018" # Used in the UI
     files:
-      - label: "Homepage 2018"
-        name: "homepage-2018"
+      - label: "Homepage"
+        name: "homepage"
         file: "2018/index.html"
         fields: # The fields for each document, usually in front matter
           - {label: "Title", name: "title", widget: "string"}
-      - label: "Homepage 2022"
-        name: "homepage-2022"
+  - name: "2022" # Used in routes, e.g., /admin/collections/blog
+    label: "2022" # Used in the UI
+    files:
+      - label: "Homepage"
+        name: "homepage"
         file: "2022/index.html"
         fields: # The fields for each document, usually in front matter
           - {label: "Title", name: "title", widget: "string"}
