Button config updated

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -35,6 +35,7 @@ collections:
             widget: "object"
             collapsed: true
             fields:
+              - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
               - {label: "Button text", name: "ticket-button-text", widget: "string"}
               - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
               - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
