--- a/admin/config.yml
+++ b/admin/config.yml
@@ -30,12 +30,16 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Description", name: "description", description: "This is meta content.", widget: "string"}
+          - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
+          - {label: "Button text", name: "ticket-button-text", widget: "string"}
+          - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
+          - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
           - label: "Hero button"
-            name: "hero-button"
-            widget: "object"
-            collapsed: true
-            fields:
-              - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
-              - {label: "Button text", name: "ticket-button-text", widget: "string"}
-              - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
-              - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
+            # name: "hero-button"
+            # widget: "object"
+            # collapsed: false
+            # fields:
+            #   - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
+            #   - {label: "Button text", name: "ticket-button-text", widget: "string"}
+            #   - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
+            #   - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
