--- a/admin/config.yml
+++ b/admin/config.yml
@@ -26,7 +26,7 @@ collections:
           - {label: "Button text", name: "ticket-button-text", widget: "string"}
           - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
           - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
-          - label: "Hero button"
+          # - label: "Hero button"
             # name: "hero-button"
             # widget: "object"
             # collapsed: false
