--- a/admin/config.yml
+++ b/admin/config.yml
@@ -20,26 +20,18 @@ collections:
         name: "homepage"
         file: "2022/index.html"
         fields:
-          - {label: "Title", name: "title", widget: "string"}
-          - {label: "Description", name: "description", description: "This is meta content.", widget: "string"}
-          - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
-          - {label: "Button text", name: "ticket-button-text", widget: "string"}
-          - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
-          - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
-          # - label: "Hero button"
-            # name: "hero-button"
-            # widget: "object"
-            # collapsed: false
-            # fields:
-            #   - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
-            #   - {label: "Button text", name: "ticket-button-text", widget: "string"}
-            #   - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
-            #   - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
-  - label: "UX Brighton 2018" # 2018
-    name: "uxbri-2018"
-    files:
-      - label: "Homepage"
-        name: "homepage"
-        file: "2018/index.html"
-        fields:
-          - {label: "Title", name: "title", widget: "string"}
+          # - {label: "Title", name: "title", widget: "string"}
+          # - {label: "Description", name: "description", description: "This is meta content.", widget: "string"}
+          # - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
+          # - {label: "Button text", name: "ticket-button-text", widget: "string"}
+          # - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
+          # - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
+          - label: "Hero button"
+            name: "hero-button"
+            widget: "object"
+            collapsed: false
+            fields:
+              - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
+              - {label: "Button text", name: "ticket-button-text", widget: "string"}
+              - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
+              - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
