Mapping in hero ticket button

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -20,14 +20,14 @@ collections:
         name: "homepage"
         file: "2022/index.html"
         fields:
-          # - {label: "Title", name: "title", widget: "string"}
-          # - {label: "Description", name: "description", description: "This is meta content.", widget: "string"}
-          # - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
-          # - {label: "Button text", name: "ticket-button-text", widget: "string"}
-          # - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
-          # - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
-          - label: "Hero button"
-            name: "hero-button"
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Description", name: "description", description: "This is meta content.", widget: "string"}
+          - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
+          - {label: "Button text", name: "ticket-button-text", widget: "string"}
+          - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
+          - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
+          - label: "Hero"
+            name: "hero"
             widget: "object"
             collapsed: false
             fields:
