--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,6 +4,12 @@ backend:
   branch: gh-pages # Branch that Netlify CMS will be available on
   site_domain: netlify-cms-hookup.netlify.com # Using a placeholder Netlify site and custom Netlify domain to enable the backend OAuth configuration
 
+local_backend:
+  # when using a custom proxy server port
+  url: http://localhost:8082/api/v1
+  # when accessing the local site from a host other than 'localhost' or '127.0.0.1'
+  allowed_hosts: ['192.168.0.1']
+
 # These lines should *not* be indented
 publish_mode: editorial_workflow # Ensures content goes through workflow first, ("Drafts" --> "In Review" --> "Ready"), before being published
 media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
@@ -22,12 +28,17 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Description", name: "description", description: "This is meta content.", widget: "string"}
-          - label: "Hero"
+          - label: "Hero" # Hero section
             name: "hero"
             widget: "object"
             collapsed: false
             fields:
-              - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
-              - {label: "Button text", name: "ticket-button-text", widget: "string"}
-              - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
-              - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
+              - label: "Button" # Button (primary)
+                name: "button"
+                widget: "object"
+                collapsed: true
+                fields:
+                  - {label: "Button visibility", name: "ticket-button", widget: "select", options: ["show", "hide"], default: ["show"]}
+                  - {label: "Button text", name: "ticket-button-text", widget: "string"}
+                  - {label: "Button text (extra)", name: "ticket-button-extra-text", widget: "string"}
+                  - {label: "Button URL Address", name: "ticket-button-url", widget: "string"}
